Fixed the last(?) instance of inappropriate spacing between siblings.

--- a/dicts/scripts/gt_dictionary.css
+++ b/dicts/scripts/gt_dictionary.css
@@ -113,6 +113,9 @@ t + t:before {
 t {
     display: inline;
 }
+t + t {
+    margin-left: -.35em;
+}
 t:after {
     display: inline;
     font-style: italic;
